# a-mazing

./: Cargo.toml  README.md
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/api/src/entities/: maze.rs  mod.rs
apps/api/src/routes/: mod.rs
apps/api/src/routes/mazes/: generate.rs  mod.rs
apps/console/: Cargo.toml
apps/console/src/: main.rs
apps/mazer/: Cargo.toml
apps/mazer/src/: lib.rs  mappers.rs  models.rs
apps/web/: .eslintrc.json  .prettierrc.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/maze/: index.ts  maze-board.tsx  maze-tile-content.tsx  maze-tile.tsx
apps/web/src/hooks/: use-maze.ts  use-mazer.ts
apps/web/src/hooks/maze/: index.ts  use-configured-maze-board.ts  use-maze-limits.ts  use-maze.ts  use-mazer-generator.ts  use-mazer.ts  use-mutated-maze-board.ts
apps/web/src/hooks/maze/base/: index.ts  use-configured-maze-board.ts  use-maze-limits.ts  use-mazer-initialization.ts  use-mutated-maze-board.ts
apps/web/src/types/: maze.ts  tile.ts
apps/web/src/utils/: checkpoint.ts  delay.ts  tile-board.ts
console/: Cargo.toml
console/src/: main.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: lib.rs  maze.rs  maze_configuration.rs  maze_error.rs
crates/engine-runner/: Cargo.toml
crates/engine-runner/src/: lib.rs  node.rs  nodes.rs  run.rs  runner.rs  runner_error.rs
crates/maze-core/: Cargo.toml
crates/maze-core/src/: constants.rs  lib.rs  maze.rs  maze_config.rs  maze_error.rs  tile.rs
crates/maze-generator/: Cargo.toml
crates/maze-generator/src/: generator_error.rs  generator_type.rs  lib.rs
crates/maze-generator/src/generators/: helpers.rs  mod.rs  vanilla.rs  waterfall.rs
crates/maze-runner/: Cargo.toml
crates/maze-runner/src/: lib.rs  node.rs  nodes.rs  run.rs  run_result.rs  runner.rs  runner_error.rs
crates/mazer/: Cargo.toml  pack.sh
crates/mazer/src/: lib.rs  mappers.rs  models.rs
dbg/console/: Cargo.toml
dbg/console/src/: main.rs
dbg/web/: package.json  pnpm-lock.yaml
dbg/web/src/app/: page.tsx
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/core/: board.rs  tile.rs
engine/src/runner/: mod.rs  node.rs  nodes.rs  run.rs  runner.rs
engine/src/solver/: solver.rs
lib/engine/: Cargo.toml
lib/engine-wasm/: Cargo.toml
lib/engine-wasm/src/: lib.rs  models.rs
lib/engine/src/: lib.rs
lib/engine/src/core/: maze.rs  maze_configuration.rs  maze_error.rs  mod.rs  tile.rs
lib/engine/src/runner/: mod.rs  node.rs  nodes.rs  run.rs  runner.rs
