[package]
name = "maze-generator"
version = "0.0.0"
authors = ["Ladislav Prix <elix78963@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
thiserror = "1.0.61"
# local crates
maze-core.workspace = true
maze-runner.workspace = true
