[package]
name = "mazer"
version = "0.0.0"
authors = ["Ladislav Prix <elix78963@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
# local crates
maze-core.workspace = true
maze-runner.workspace = true
maze-generator.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

